# ffmpeg_sdl_player

./: Cargo.toml  README.md
src/: audio.rs  lib.rs  main.rs  player.rs  video.rs
