[package]
name = "player-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

ffmpeg-next = { version = "7.1", features = [
    "format",
    "codec",
    "software-resampling",
    "software-scaling",
] }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2"
smol = "2.0.0"
anyhow = "1.0"
futures = "0.3.28"
clap = { version = "4.5.11", features = ["derive"] }
cpal = "0.15.2"
ringbuf = "0.3.3"
bytemuck = "1.13.1"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = [
    "sdl2",
    "sdl2-image[libjpeg-turbo,tiff,libwebp]",
    "sdl2-ttf",
    "sdl2-gfx",
    "sdl2-mixer",
]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.05.24"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[build-dependencies]
pkg-config = "0.3"

